--- a/CourseManagement/CourseManagement/CourseManagement.vcxproj
+++ b/CourseManagement/CourseManagement/CourseManagement.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClInclude Include="Header.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Manager.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
