--- a/VehicleManagement/VehicleManagement/VehicleManagement.vcxproj.filters
+++ b/VehicleManagement/VehicleManagement/VehicleManagement.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClInclude Include="Role.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Permission.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
